--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -6,10 +6,10 @@ allprojects {
 
 ext {
     //Android
-    androidBuildToolsVersion = "24.0.1"
-    androidMinSdkVersion = 15
-    androidTargetSdkVersion = 21
-    androidCompileSdkVersion = 21
+    androidBuildToolsVersion = "25.0.1"
+    androidMinSdkVersion = 19
+    androidTargetSdkVersion = 25
+    androidCompileSdkVersion = 25
 
     //Libraries
     daggerVersion = '2.8'
@@ -18,6 +18,8 @@ ext {
     rxJavaVersion = '2.0.2'
     rxAndroidVersion = '2.0.1'
     apacheCommonsLang = '3:3.4'
+    appCompatVersion = '22.2.0'
+    appSupportVersion = '25.0.1'
 
 
     javaxAnnotationVersion = '1.0'
@@ -48,7 +50,9 @@ ext {
             recyclerView:       "com.android.support:recyclerview-v7:${recyclerViewVersion}",
             rxJava:             "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
             rxAndroid:          "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
-            javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}"
+            javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
+            appCompat:          "com.android.support:appcompat-v7:${appCompatVersion}",
+            appSupport:         "com.android.support:appcompat-v4:${appSupportVersion}"
     ]
 
     presentationTestDependencies = [
