--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -66,7 +66,8 @@ dependencies {
     compile project(':domain')
     compile project(':data')
 
-    apt presentationDependencies.daggerCompiler
+    //apt presentationDependencies.daggerCompiler
+    annontationProcessor presentationDependencies.daggerCompiler
     compile presentationDependencies.dagger
     compile presentationDependencies.butterKnife
     compile presentationDependencies.recyclerView
